# NexusAI

./: .dockerignore  .env.example  .gitignore  PROGRESS.md  README.md  architecture-and-plan.md  check_exact.py  check_lines.py  docker-compose.bluegreen.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: README.md  nexus_config.yaml
control_plane/: Dockerfile  README.md  main.py  models.py  observability.py  orchestration_workspace_store.py  repo_workspace.py  repo_workspace_usage_store.py  sqlite_helpers.py  task_result_files.py
dashboard/: Dockerfile  README.md  app.py  auth.py  bot_launch.py  connections_service.py  cp_client.py  db.py  deploy_manager.py  main.py  models.py  onboarding.py  project_data.py  project_data_ingest.py  settings.py  workflow_templates.py
docs/: ARCHITECTURE.md  CHAT_PM_WORKSPACE_SETUP.md  COURSE_PIPELINE_V2.md  DEPLOY_BLUEGREEN.md  GETTING_STARTED.md  OPERATIONS.md  PM_BOT_PACK_OLLAMA_CLOUD.md  PM_WORKFLOW.md  REFACTOR_PRIORITIES.md  UAT_RUNBOOK.md  USER_GUIDE.md
monitoring/: prometheus.yml
nexus_worker/: README.md  __main__.py  agent.py  config.yaml.example  observability.py
scripts/: bootstrap_bluegreen.sh  build_course_pipeline_v2.py  check_db_drift.sh  deploy-bluegreen.sh  ingest_project_data.py  install_repo_runtime_toolchains.sh  pre_uat_security_checks.ps1  preflight_deploy.py  setup_pm_bot_pack.py  switch-dashboard-color.sh  validate_bot_exports.py
shared/: README.md  bot_policy.py  chat_attachments.py  config_loader.py  exceptions.py  models.py  settings_manager.py  tool_catalog.py
tests/: README.md  conftest.py  test_assignment_apply_api.py  test_bot_registry.py  test_chat_api.py  test_chat_manager.py  test_chunker.py  test_context_limits.py  (+36 more)
(+182 files in other folders)
