[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusai"
version = "0.1.0"
description = "Modular distributed LLM Control Plane"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "pynvml>=11.5.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.0",
    "sqlalchemy>=2.0.0",
    "email-validator>=2.0.0",
    "gunicorn>=21.2.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["control_plane*", "worker_agent*", "dashboard*", "shared*"]
exclude = ["tests*", "config*", "data*"]
